--- a/src/css/card.css
+++ b/src/css/card.css
@@ -46,6 +46,38 @@
   background: #d4ebff;
 }
 
+.card-options-form {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+
+  height: 80px;
+  margin-top: 20px;
+
+  background: #f6fbff;
+  border: 1px solid #d4ebff;
+  border-radius: 20px;
+
+  font-size: 14px;
+  line-height: 26px;
+}
+
+.card-options-change {
+  padding-bottom: 15px;
+  padding-top: 5px;
+
+  border-bottom: 1px solid #d4ebff;
+  color: #669854;
+  font-family: Montserrat;
+}
+
+.card-options-delete {
+  padding-bottom: 5px;
+
+  color: #dd5f69;
+  font-family: Montserrat;
+}
+
 .card-content {
   width: 180px;
   margin: 12px 12px 0 0;
