--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
   background: #eaebf1;
@@ -9,8 +9,8 @@ body {
 #start-container {
   display: flex;
   justify-content: space-between;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #main-start {
@@ -63,7 +63,7 @@ body {
   justify-content: space-between;
 }
 
-#login,
+#username,
 #password,
 #email {
   padding: 4px 20px;
@@ -81,7 +81,7 @@ body {
   color: #707478;
 }
 
-#login::placeholder,
+#username::placeholder,
 #password::placeholder,
 #email::placeholder {
   color: #c4c4c4;
@@ -103,4 +103,7 @@ body {
 #sign-up-link a {
   text-decoration: none;
   color: #45a6ff;
+}
+#error {
+  color: red;
 }
