--- a/src/css/login.css
+++ b/src/css/login.css
@@ -56,7 +56,8 @@ body {
   margin-bottom: 0;
 }
 
-#login-form {
+#login-form,
+#register-form {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -64,6 +65,7 @@ body {
 }
 
 #username,
+#login,
 #password,
 #email {
   padding: 4px 20px;
@@ -82,6 +84,7 @@ body {
 }
 
 #username::placeholder,
+#login::placeholder,
 #password::placeholder,
 #email::placeholder {
   color: #c4c4c4;
