--- a/src/css/login.css
+++ b/src/css/login.css
@@ -88,6 +88,10 @@ body {
 }
 
 .btn-login {
+  outline: none;
+  border: none;
+  background: none;
+
   height: 50px;
 
   background: #666a6d;
@@ -98,6 +102,10 @@ body {
   font-size: 23px;
 
   color: #ffffff;
+}
+
+.btn-login:hover {
+  cursor: pointer;
 }
 
 #sign-up-link a {
